// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`namespace.sql > line 7 1`] = `
[
  "SELECT pg_catalog.set_config('search_path', ' ', false)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 29,
                            "sval": {
                              "sval": "search_path",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 44,
                            "sval": {
                              "sval": " ",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 49,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "set_config",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`namespace.sql > line 9 1`] = `
[
  "CREATE SCHEMA test_ns_schema_1
       CREATE UNIQUE INDEX abc_a_idx ON abc (a)

       CREATE VIEW abc_view AS
              SELECT a+1 AS a, b+1 AS b FROM abc

       CREATE TABLE abc (
              a serial,
              b int UNIQUE
       )",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "schemaElts": [
              {
                "IndexStmt": {
                  "accessMethod": "btree",
                  "idxname": "abc_a_idx",
                  "indexParams": [
                    {
                      "IndexElem": {
                        "name": "a",
                        "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                        "ordering": "SORTBY_DEFAULT",
                      },
                    },
                  ],
                  "relation": {
                    "inh": true,
                    "location": 71,
                    "relname": "abc",
                    "relpersistence": "p",
                  },
                  "unique": true,
                },
              },
              {
                "ViewStmt": {
                  "query": {
                    "SelectStmt": {
                      "fromClause": [
                        {
                          "RangeVar": {
                            "inh": true,
                            "location": 156,
                            "relname": "abc",
                            "relpersistence": "p",
                          },
                        },
                      ],
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 132,
                            "name": "a",
                            "val": {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "a",
                                        },
                                      },
                                    ],
                                    "location": 132,
                                  },
                                },
                                "location": 133,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "+",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 134,
                                  },
                                },
                              },
                            },
                          },
                        },
                        {
                          "ResTarget": {
                            "location": 142,
                            "name": "b",
                            "val": {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "b",
                                        },
                                      },
                                    ],
                                    "location": 142,
                                  },
                                },
                                "location": 143,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "+",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 144,
                                  },
                                },
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                  "view": {
                    "inh": true,
                    "location": 99,
                    "relname": "abc_view",
                    "relpersistence": "p",
                  },
                  "withCheckOption": "NO_CHECK_OPTION",
                },
              },
              {
                "CreateStmt": {
                  "oncommit": "ONCOMMIT_NOOP",
                  "relation": {
                    "inh": true,
                    "location": 181,
                    "relname": "abc",
                    "relpersistence": "p",
                  },
                  "tableElts": [
                    {
                      "ColumnDef": {
                        "colname": "a",
                        "is_local": true,
                        "location": 201,
                        "typeName": {
                          "location": 203,
                          "names": [
                            {
                              "String": {
                                "sval": "serial",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    {
                      "ColumnDef": {
                        "colname": "b",
                        "constraints": [
                          {
                            "Constraint": {
                              "contype": "CONSTR_UNIQUE",
                              "location": 231,
                            },
                          },
                        ],
                        "is_local": true,
                        "location": 225,
                        "typeName": {
                          "location": 227,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  ],
                },
              },
            ],
            "schemaname": "test_ns_schema_1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`namespace.sql > line 21 1`] = `
[
  "SET search_path to public",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 19,
                  "sval": {
                    "sval": "public",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "search_path",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`namespace.sql > line 25 1`] = `
[
  "       CREATE VIEW abc_view AS SELECT c FROM abc",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 45,
                      "relname": "abc",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 38,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c",
                              },
                            },
                          ],
                          "location": 38,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "view": {
              "inh": true,
              "location": 19,
              "relname": "abc_view",
              "relpersistence": "p",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`namespace.sql > line 31 1`] = `
[
  "BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`namespace.sql > line 34 1`] = `
[
  "       CREATE VIEW abc_view AS SELECT a FROM abc",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 45,
                      "relname": "abc",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 38,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 38,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "view": {
              "inh": true,
              "location": 19,
              "relname": "abc_view",
              "relpersistence": "p",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`namespace.sql > line 41 1`] = `
[
  "SELECT COUNT(*) FROM pg_class WHERE relnamespace =
    (SELECT oid FROM pg_namespace WHERE nspname = 'test_ns_schema_1')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 21,
                  "relname": "pg_class",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "relnamespace",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "location": 49,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "SubLink": {
                    "location": 55,
                    "subLinkType": "EXPR_SUBLINK",
                    "subselect": {
                      "SelectStmt": {
                        "fromClause": [
                          {
                            "RangeVar": {
                              "inh": true,
                              "location": 72,
                              "relname": "pg_namespace",
                              "relpersistence": "p",
                            },
                          },
                        ],
                        "limitOption": "LIMIT_OPTION_DEFAULT",
                        "op": "SETOP_NONE",
                        "targetList": [
                          {
                            "ResTarget": {
                              "location": 63,
                              "val": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "oid",
                                      },
                                    },
                                  ],
                                  "location": 63,
                                },
                              },
                            },
                          },
                        ],
                        "whereClause": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "nspname",
                                    },
                                  },
                                ],
                                "location": 91,
                              },
                            },
                            "location": 99,
                            "name": [
                              {
                                "String": {
                                  "sval": "=",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "location": 101,
                                "sval": {
                                  "sval": "test_ns_schema_1",
                                },
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`namespace.sql > line 44 1`] = `
[
  "INSERT INTO test_ns_schema_1.abc DEFAULT VALUES",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "abc",
              "relpersistence": "p",
              "schemaname": "test_ns_schema_1",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`namespace.sql > line 48 1`] = `
[
  "SELECT * FROM test_ns_schema_1.abc",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "abc",
                  "relpersistence": "p",
                  "schemaname": "test_ns_schema_1",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`namespace.sql > line 51 1`] = `
[
  "ALTER SCHEMA test_ns_schema_1 RENAME TO test_ns_schema_renamed",
  {
    "stmts": [
      {
        "stmt": {
          "RenameStmt": {
            "behavior": "DROP_RESTRICT",
            "newname": "test_ns_schema_renamed",
            "relationType": "OBJECT_ACCESS_METHOD",
            "renameType": "OBJECT_SCHEMA",
            "subname": "test_ns_schema_1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`namespace.sql > line 53 1`] = `
[
  "    (SELECT oid FROM pg_namespace WHERE nspname = 'test_ns_schema_1')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 21,
                  "relname": "pg_namespace",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 12,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "oid",
                          },
                        },
                      ],
                      "location": 12,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "nspname",
                        },
                      },
                    ],
                    "location": 40,
                  },
                },
                "location": 48,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 50,
                    "sval": {
                      "sval": "test_ns_schema_1",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`namespace.sql > line 56 1`] = `
[
  "CREATE SCHEMA test_ns_schema_renamed",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "schemaname": "test_ns_schema_renamed",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`namespace.sql > line 56 2`] = `
[
  " -- fail, already exists
CREATE SCHEMA IF NOT EXISTS test_ns_schema_renamed",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "if_not_exists": true,
            "schemaname": "test_ns_schema_renamed",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`namespace.sql > line 64 1`] = `
[
  "DROP SCHEMA test_ns_schema_renamed CASCADE",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_CASCADE",
            "objects": [
              {
                "String": {
                  "sval": "test_ns_schema_renamed",
                },
              },
            ],
            "removeType": "OBJECT_SCHEMA",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
